Fixed wording in exercise description.

--- a/Exercises/Development/Boyer_Moore_MMC_Exercise.html
+++ b/Exercises/Development/Boyer_Moore_MMC_Exercise.html
@@ -176,7 +176,7 @@
       <div class="problems">
         <div>
           <div class="question">
-            The exercise below will test your newly acquired knowledge on the Boyer-Moore MMC array. Please use the text field to fill in the correct value that is missing from the MMC array. When you are finished hit <b>Check Answer</b> to see if you are correct.
+            The exercise below will test your newly acquired knowledge on the Boyer-Moore MMC array. Please use the text field to fill in the correct value that is missing from the MMC array below. When you are finished hit <b>Check Answer</b> to see if you are correct.
             <p><b>Your solution:</b> <input type = "text" id = "user_answer" size = "2"/> </p>
             <div id="jsav_area"></div>
           </div> <!-- question -->
