--- a/Exercises/Development/KMP_Compares_Shifts_Exercise.html
+++ b/Exercises/Development/KMP_Compares_Shifts_Exercise.html
@@ -306,7 +306,7 @@
       <div class="problems">
         <div>
           <div class="question">
-             This exercise will provide you with 2 strings. The first string represents the master string, the second represents the sub string. For this exercise you will trace through the algorithm, counting the number of comparisons and shifts made. Comparisons are the number of character comparisons made in the algorithm, this can be generalized to the number of times the while loop must iterate. Shifts are counted by the number of times the shift amount must be looked up in the alignment array, therefore we don't count mismatches on the first character in the sub string as a shift, only when the algorithm enters the else statement in the pseudo code. When you are done tracing the algorithm, enter the two numbers you come up with and hit Check Answer. <br /> <br />
+             This exercise will provide you with 2 strings. The first string represents the master string, the second represents the substring. For this exercise you will trace through the algorithm, counting the number of comparisons and shifts made. Comparisons are the number of character comparisons made in the algorithm, which is equal to the number of times the while loop must iterate. Shifts are counted by the number of times the shift amount must be looked up in the alignment array. Therefore we don't count mismatches on the first character in the sub string as a shift, only when the algorithm enters the else statement in the pseudo code. When you are done tracing the algorithm, enter the two numbers you come up with and hit Check Answer. <br /> <br />
 
               <p id = "string1"> </p>
               <p id = "string2"> </p>
