--- a/Exercises/Development/KMP_Exercise.html
+++ b/Exercises/Development/KMP_Exercise.html
@@ -49,7 +49,7 @@
   //this determines the maximum length of the substring
   var substring_max_length = 8;
   //this determines the maximum length of the master string
-  var master_string_max_length = 15;
+  var master_string_max_length = 14;
   //this represents the lower bound of randomly generated numbers desired in the ascii table
   var char_lower_bound = 97;
   //this represents the upper bound of randomly generated numbers desired in the ascii table
@@ -345,6 +345,10 @@
     }
     search_start_index = 0;
 
+	var master_label = kmp_exercise.label("Master:",{before:main_text,"left":"0px"});
+	var sub_label = kmp_exercise.label("Sub:",{before:search_string,"left":"0px"});
+	var align_label = kmp_exercise.label("Align Arr:",{before:alignment_table,"left":"0px"});
+
     main_text.click(clickHandler);
     search_string.click(clickHandlerSub);
   }
@@ -361,7 +365,7 @@
       <div class="problems">
         <div>
           <div class="question">
-            The exercise below will test your newly acquired knowledge on the KMP algorithm. Assume the two characters highlighted in red were just compared and it is discovered they don't match. Please click the index of the master string that will be compared <b>after the current mismatch</b> and then the index of the substring that will be compared to it. When you are finished hit <b>Check Answer</b> to see if you are correct. The values in the strings that have already been compared are highlighted in green so there is no confusion. The idea is to trace the string <b><var>sub_str</var></b> through the string <b><var>master_str</var></b> using the KMP Algorithm for just one step.
+            The exercise below will test your newly acquired knowledge on the KMP algorithm. Assume the two characters highlighted in red were just compared and it is discovered they don't match. Please click the index of the master string that will be compared <b>after the current mismatch</b> and then the index of the substring that will be compared to it. When you are finished hit <b>Check Answer</b> to see if you are correct. The values in the strings that have already been compared are highlighted in green so there is no confusion. In effect what you are doing is tracing the string <b><var>sub_str</var></b> through the string <b><var>master_str</var></b> using the KMP Algorithm for just one step.
             <div id="jsav_area"></div>
           </div> <!-- question -->
           <div class="solution" data-type="custom">
