Fixed exercise description/instructions.

--- a/Exercises/Development/Rabin_Karp_Horners_Exercise.html
+++ b/Exercises/Development/Rabin_Karp_Horners_Exercise.html
@@ -148,7 +148,7 @@
       <div class="problems">
         <div>
           <div class="question">
-            The exercise below will test your newly acquired knowledge on the Rabin-Karp Horner's Method. You will be provided with a Q and a random string. Please use the text field to fill in the 'Magic Number' of the given string. When you are finished hit <b>Check Answer</b> to see if you are correct. Use the provided pseudo code to help you find your answer, a calculator may be necessary.
+            The exercise below will test your newly acquired knowledge of Horner's Method, which is used in the Rabin-Karp algorithm. You will be provided with values for Q, C, and a random string. Please use the text field to fill in the 'Magic Number' of the given string. When you are finished hit <b>Check Answer</b> to see if you are correct. Use the provided pseudo code to help you find your answer. (A calculator may be necessary.)
             <p><b>Your solution:</b> <input type = "text" id = "user_answer" size = "2"/> </p>
             <div id="jsav_area"></div>
           </div> <!-- question -->
