Changed instructions for BST Delete proficiency.

--- a/AV/Development/BST-delete-proficiency.html
+++ b/AV/Development/BST-delete-proficiency.html
@@ -24,7 +24,7 @@
         <div id="jsavcontainer">
             <p class="instructLabel">Instructions:</p>
             <p class="instructions">
-                    Use the BST Delete algorith to delete the values in the array. Click on a node to erase its value, or if there is a previously erased value, to move the value into the erased node or replace the node. 
+                    Use the BST Delete algorith to delete the values in the stack. Click on a node to erase its value, or if there is a previously erased value, to move the value into the erased node or replace the node. 
             </p>
             <p align="center" class="jsavexercisecontrols"></p>
         </div>
