--- a/Exercises/Development/LstChptrMCQdslifo.html
+++ b/Exercises/Development/LstChptrMCQdslifo.html
@@ -17,7 +17,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">The term "FIFO" is associated with which data structure?</p>
+      <p class="question">The term "LIFO" is associated with which data structure?</p>
       <div class="solution"><var>"stack"</var></div>
       <ul class="choices">
 	<li><var>"list"</var> </li>
