Modify javascript script loading in Ka exercises to use new version of Khan-exercises framework.

--- a/Exercises/Development/ODSAindex.html
+++ b/Exercises/Development/ODSAindex.html
@@ -6,8 +6,7 @@
    src="../../lib/jquery.min.js">
 </script>
 <script src="../../lib/jquery-ui.min.js"></script>
-  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
-   <script src="../../lib/khan-exercise-min.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
 </head>
 <body>
 
