--- a/Exercises/Hashing/HashFuncMod.html
+++ b/Exercises/Hashing/HashFuncMod.html
@@ -5,11 +5,7 @@
   <title>Hash Function: Simple Mod</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-  </script>
-  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
-  <script src="../../lib/khan-exercise-min.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
 </head>
 
 <body>
